# zzz-fullstack-64

backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/core/: constants.py  dynamics_mapper.py  music_model.py  repeat_unfolder.py
backend/app/models/: score.py
backend/app/routers/: midi.py  scores.py
backend/app/schemas/: music.py  score.py
backend/app/services/: midi_generator.py  score_service.py  validation.py
backend/tests/: conftest.py  test_core.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: scores.ts
frontend/src/components/dialogs/: ScoreListDialog.vue
frontend/src/components/playback/: PlaybackBar.vue
frontend/src/components/score/: ScoreCanvas.vue
frontend/src/components/toolbar/: NoteToolbar.vue
frontend/src/components/voice/: VoicePanel.vue
frontend/src/composables/: useNoteInput.ts  usePlayback.ts  useVexFlow.ts
frontend/src/stores/: playbackStore.ts  scoreStore.ts  uiStore.ts
frontend/src/types/: music.ts
