[project]
name = "score-editor-backend"
version = "1.0.0"
description = "Lightweight online music score editor API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "mido>=1.3.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
